--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AoE4 Guides</title>
+    <title>AoE4 Guides | Your Home for Age of Empires IV Guides and Build Orders</title>
   </head>
   <body>
     <div id="app"></div>
