--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/assets/favicon-192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AoE4 Guides | Your Home for Age of Empires IV Guides and Build Orders</title>
   </head>
