--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
     <link rel="icon" href="/assets/favicon-192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AoE4 Guides | Your Home for Age of Empires IV Guides and Build Orders</title>
+    <title>Create and share build orders for Age of Empires IV | AoE4 Guides</title>
 
     <!-- Meta Tags-->
-    <meta name="description" content="Create and manage new Age of Empires IV build orders and share them with your friends. User your build order with the Overlay Tool for Age of Empires IV.">
+    <meta name="description" content="Create and share build orders for Age of Empires IV. Export and use any build order with the Overlay Tool for AoE4.">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://aoe4guides.com">
-    <meta property="og:title" content="AoE4 Guides | Your Home for Age of Empires IV Guides and Build Orders">
-    <meta property="og:description" content="Create and manage new Age of Empires IV build orders and share them with your friends. User your build order with the Overlay Tool for Age of Empires IV.">
+    <meta property="og:title" content="Create and share build orders for Age of Empires IV | AoE4 Guides">
+    <meta property="og:description" content="Create and share build orders for Age of Empires IV. Export and use any build order with the Overlay Tool for AoE4.">
     <meta property="og:image" content="https://aoe4guides.com/assets/link-preview.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="aoe4guides.com">
     <meta property="twitter:url" content="https://aoe4guides.com">
-    <meta name="twitter:title" content="AoE4 Guides | Your Home for Age of Empires IV Guides and Build Orders">
-    <meta name="twitter:description" content="Create and manage new Age of Empires IV build orders and share them with your friends. User your build order with the Overlay Tool for Age of Empires IV.">
+    <meta name="twitter:title" content="Create and share build orders for Age of Empires IV | AoE4 Guides">
+    <meta name="twitter:description" content="Create and share build orders for Age of Empires IV. Export and use any build order with the Overlay Tool for AoE4.">
     <meta name="twitter:image" content="https://aoe4guides.com/assets/link-preview.png">
   </head>
   <body>
