Updated titles for SEO

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
     <link rel="icon" href="/assets/favicon-192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create and share build orders for Age of Empires IV | AoE4 Guides</title>
+    <title>Age of Empires IV Build Orders | AOE4 GUIDES</title>
 
     <!-- Meta Tags-->
     <meta name="description" content="Create and share build orders for Age of Empires IV. Export and use any build order with the Overlay Tool for AoE4.">
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://aoe4guides.com">
-    <meta property="og:title" content="Create and share build orders for Age of Empires IV | AoE4 Guides">
+    <meta property="og:title" content="Age of Empires IV Build Orders | AOE4 GUIDES">
     <meta property="og:description" content="Create and share build orders for Age of Empires IV. Export and use any build order with the Overlay Tool for AoE4.">
     <meta property="og:image" content="https://aoe4guides.com/assets/link-preview.png">
 
@@ -20,7 +20,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="aoe4guides.com">
     <meta property="twitter:url" content="https://aoe4guides.com">
-    <meta name="twitter:title" content="Create and share build orders for Age of Empires IV | AoE4 Guides">
+    <meta name="twitter:title" content="Age of Empires IV Build Orders | AOE4 GUIDES">
     <meta name="twitter:description" content="Create and share build orders for Age of Empires IV. Export and use any build order with the Overlay Tool for AoE4.">
     <meta name="twitter:image" content="https://aoe4guides.com/assets/link-preview.png">
   </head>
